--- a/Ancient_spells.html
+++ b/Ancient_spells.html
@@ -80,6 +80,39 @@
 
 
 
+
+
+    <a></a>
+    [리얼리티 트랜서핑1 115p] 자신을 빌려줄 때는 어떤 상황이든 자신이 맡은 일을 흠잡을 데 없이 잘 수행해야 한다. 이때, 당신 내면의 관찰자인 지켜보는 자가 당신을 돕게 하라. 그러지 않으면 당신은 머지 않아 또다시 게임에 빠져들게 될 것이다. 당신 내면의 지켜보는 자는 결코 분리된 인격 따위가 아니다. 더 큰 자아인 내면의 관찰자는 배후에서 당신이 무엇을 하는지, 그리고 어떻게 하는지를 단순히 알아차리고 있다.
+    <br><br>
+
+    <a></a>
+    [리얼리티 트랜서핑1 114p] 자신을 빌려주는 동안에는 흠잡을 데 없이 행동하라. 사소한 실수도 하지 않도록 주의하라. 그것은 당신이 해이하다고 비난받을 빌미를 준다. 흠잡을 데 없는 경지는 일의 성과를 좌우한다. 자신을 빌려준다는 것은 자신의 행위에 책임을 지지 않고 게이름을 피우는 것과는 전혀 다르다. 그것은 잉여 포텐셜을 만들어내지 않으면서 집착 없이 행동하는 것을 말한다. 그러나 동시에, 시시콜콜한 세부사항에 이르기까지 당신에게 요구된 모든 일을 완수하는 것을 의미한다. 그렇게 하지 않으면 길이 순조롭지 않을 것이다.
+    <br><br>
+
+    <a></a>
+    [리얼리티 트랜서핑1 113p] 지나친 노력은 반드시 부정적인 결과를 가져온다.<br>
+    이 모든 일이 어떻게 일어나는지를 살펴보자. 일 외에도 당신이 가치를 두는 것들은 많이 있다. 집, 가족, 오락, 여가 시간 등등. 직장일을 다른 어떤 것보다도 우선시한다면 당신은 아주 강력한 잉여 포텐셜을 만들어낸 것이다. 자연의 모든 것은 균형을 이루려고 한다. 그러므로 당신의 의지와는 상관없이 균형력이 발현하여 그 잉여 포텐셜을 처리할 것이다.
+    <br><br>
+
+    <a></a>
+    [리얼리티 트랜서핑1 112p] 현실을 왜곡시키는 그릇된 평가는 두 가지 경로를 통해 생길 수 있다. 하나는 대상에게 지나치게 부정적인 성질을 부여하는 것이고, 다른 하나는 지나치게 긍정적인 성질을 부여하는 것이다. 그렇지만 평가의 오류, 그 자체는 어떤 역할도 하지 않는다. 그릇되고 왜곡된 평가는, 그것이 당신에게 아주 중요한 의미를 가질 때에만 잉여 포텐셜을 만들어낸다. 당신에게 특별히 중요한 대상과 상황만이 당신의 평가에 에너지를 공급해주는 것이다.
+    <br><br>
+
+    <a></a>
+    [리얼리티 트랜서핑1 103p] 아주 끊기 있고 단호하게 이 방법을 사용한다면 결국에는 새로운 습관이 낡은 습관을 몰아낼 것이다. 그러나 그전까지는 펜듈럼이 온갖 방법으로 접근해오려고 애쓸 것이다. 온갖 짜증나는 일들이 마치 일부러 그러는 것처럼 온통 튀어나오기 시작할 것이다. 그러나 절망하지 말라. 그런 문제들도 대부분 사소하고 시시한 것일 테니까. 포기하지 않는다면, 그리고 기억하기를 배운다면 당신의 승리는 대단히 감명 깊을 것이 될 것이다.
+    <br><br>
+
+    <a></a>
+    [리얼리티 트랜서핑1 102-103p] 모든 불행은 아무리 못해도 훌륭한 교훈은 될 수 있다. 그것은 당신을 더 강하고 노련하게 만들어준다. 당신의 세계에서 일어나는 모든 좋은 일에서 기쁨을 얻으라. 그러면 세상은 완전히 낙원으로 바뀔 것이다. 물론 이렇게 하는 것은 아주 평범하지 않은 행동방식이다. 하지만 당신의 목표 또한 아주 비범하지 않은가? 자신의 소원을 성취하는 지니가 되는 것 말이다. 평범한 방법으로 어떻게 그런 목표를 이룰 수가 있겠는가?<br>
+    싫어하는 일에 부정적으로 반응하는 습관이 우리 안에 깊이 뿌리내리고 있어서, 긍정적으로 반응한다는 것이 당장은 어려운 일이다. 불행한 일이 일어날 때마다 그것이 당신을 옭아매려는 펜듈럼임을 기억하는 것. 그것을 배우는 일이 중요하다. 그것을 기억하는 순간, 당신은 의식적인 선택을 할 수 있게 된다. 당신의 부정적인 감정을 모두 밖으로 퍼부음으로써 펜듈럼에게 에너지를 줄 것인지, 아니면 펜듈럼을 빈손으로 돌아가게 하여 승리를 얻어낼 것인지를.<br>
+    그것을 기억해내기만 한다면, 펜듈럼을 그냥 지나가게 하거나 꺼버리는 것은 쉬운 일이다. 우리는 언제나 무의식적으로 펜듈럼에게 에너지를 준다. 앞서 말했듯이, 펜듈럼은 감정의 줄로써 우리를 움직이고, 우리의 습관은 포획 메커니즘을 작동시키는 스위치 역할을 한다.
+    <br><br>
+
+    <a></a>
+    [리얼리티 트랜서핑1 101-102p] 세상에 대해 나쁘게 생각하면 할수록 세상은 더욱 더 나빠진다. 최소한 그 사람에게만은 그렇다. 자신의 실패에 대해 화를 내면 낼수록 더 많은 실패가 찾아올 것이다. "뿌린 대로 거둔다." 비관적인 태도로 살기를 택한다면 그는 날마다 트랜서핑을 거꾸로 연습하는 것이다. 그는 지옥 같은 삶이 기다리고 있는 인생트랙으로 미끄러져 가고 있는 것이다. 그와 정반대의 태도를 생각해보라. 불행한 상황에서 의도적으로 기뻐하고, 그 속에서 작은 것이라도 뭔가 쓸모 있는 것을 찾아보라. 이것은 언제나 가능한 일이다.
+    <br><br>
+
     <a></a>
     [리얼리티 트랜서핑1 101p] 대부분의 사람들은 삶 속에 원치 않은 사건이 일어날 때, 그것을 적대시한다. 우리가 원치 않은 사건이란 대개 원래의 시나리오에 없는 사건이다. 그리고 이 반대의 경우도 성립한다. 우리는 뭔가가 자신의 기대에 부합할 때만 그것이 성공적이라고 믿는다.
     <br><br>
@@ -387,7 +420,7 @@
     <br><br>
 
     <a></a>
-    [아주 작은 습관의 힘 61p] 물론 우리의 정체성에 영향을 미치는 행동만이 습관이 되는 것은 아니다. 자주 받복하는 행동도 습관이 되며, 대개 그런 반복이 습관형성에 매우 중요한 요소가 된다. 삶에서의 경험 하나하나는 자아상을 조정한다. 그렇지만 공을 한 번 찼다고 해서 누구나 스스로를 축구하는 사람으로 여기진 않는다. 그림 한 장 그렸다고 그림 그리는 사람으로 여기지도 않는다. 하지만 이런 행위를 반복해나가면 증거가 서서히 쌓이고, 자아상이 변화하기 시작한다.<br>
+    [아주 작은 습관의 힘 61p] 물론 우리의 정체성에 영향을 미치는 행동만이 습관이 되는 것은 아니다. 자주 반복하는 행동도 습관이 되며, 대개 그런 반복이 습관형성에 매우 중요한 요소가 된다. 삶에서의 경험 하나하나는 자아상을 조정한다. 그렇지만 공을 한 번 찼다고 해서 누구나 스스로를 축구하는 사람으로 여기진 않는다. 그림 한 장 그렸다고 그림 그리는 사람으로 여기지도 않는다. 하지만 이런 행위를 반복해나가면 증거가 서서히 쌓이고, 자아상이 변화하기 시작한다.<br>
     한 번의 특별한 경험은 그 영향력이 서서히 사라지지만, 습관은 시간과 함께 그 영향력이 더욱 강화된다. 즉, 습관은 정체성을 형성하는 가장 큰 증거가 되는 것이다. 이런 관점에서 습관을 세운다는 것은 자기 자신을 만들어나가는 과정이기도 하다.<br>
     이는 점진적인 변화다. 아주 작은 노력 하나, 완전히 변화하겠다고 결심하는 것만으로 우리는 변화하지 않는다. 우리는 조금씩, 매일매일, 하나하나식 변화한다. 자아는 아주 미세하게 지속적으로 진화해나간다.
     <br><br>
@@ -435,7 +468,7 @@
     <br><br>
 
     <a></a>
-    [아주 작은 습관의 힘 46p] 목표를 달성하는 것은 우리 인생의 '한순간'을 변화시킬 뿐이다. 이는 '개선'과는 다르다. 우리는 결과를 바꿔야 한다고 생각하지만 사실 그 결과는 문제가 아니다. 진짜로 해야 할 일은 결과를 유발한느 시스템을 바꾸는 것이다. 결과 수준에서 문제를 해결하려고 하면 이는 임시방편일 뿐이다. 영원히 개선하고자 한다면 결과가 아니라 시스템 단계에서 문제를 해결해야 한다. 입력 값을 고쳐야 결과 값이 바뀐다.
+    [아주 작은 습관의 힘 46p] 목표를 달성하는 것은 우리 인생의 '한순간'을 변화시킬 뿐이다. 이는 '개선'과는 다르다. 우리는 결과를 바꿔야 한다고 생각하지만 사실 그 결과는 문제가 아니다. 진짜로 해야 할 일은 결과를 유발하는 시스템을 바꾸는 것이다. 결과 수준에서 문제를 해결하려고 하면 이는 임시방편일 뿐이다. 영원히 개선하고자 한다면 결과가 아니라 시스템 단계에서 문제를 해결해야 한다. 입력 값을 고쳐야 결과 값이 바뀐다.
     <br><br>
 
     <a></a>
@@ -452,7 +485,7 @@
     <br><br>
 
     <a></a>
-    [아주 작은 습관의 힘 37-38p] 일상의 습관들이 아주 조금만 바뀌어도 우리의 인생은 전혀 다른 곳으로 나아갈 수 있다. 1퍼센트 나아지거나 나빠지는 건 그 순간에는 큰 의미가 없어 보이지만 그런 순간들이 평생 쌓여 모인다면 이는 내가 어떤 사람이 되어 있을지, 어떤 사람이 될 수 있을지의 차이를 결정하게 된다. 성공은 일상적인 습관의 결과다. 우리으 ㅣ삶은 한순간의 변화로 만들어지는 것이 아니다.<br>
+    [아주 작은 습관의 힘 37-38p] 일상의 습관들이 아주 조금만 바뀌어도 우리의 인생은 전혀 다른 곳으로 나아갈 수 있다. 1퍼센트 나아지거나 나빠지는 건 그 순간에는 큰 의미가 없어 보이지만 그런 순간들이 평생 쌓여 모인다면 이는 내가 어떤 사람이 되어 있을지, 어떤 사람이 될 수 있을지의 차이를 결정하게 된다. 성공은 일상적인 습관의 결과다. 우리의 삶은 한순간의 변화로 만들어지는 것이 아니다.<br>
     지금 당장 어떤 방법이 성공적이든 성공적이지 않든 그것이 중요하진 않다. 중요한 건 우리가 가지고 있는 습관이 성공으로 가는 경로에 있느냐는 것이다. 현재 일어난 결과보다 지금 어디에 서 있느냐가 훨씬 더 중요하다.<br>
     백만장자라 해도 매달 버는 것보다 쓰는 게 더 많다면 나쁜 궤도에 있는 셈이다. 습관을 바꾸려고 노력하지 않는다면 결과는 좋게 나오지 않는다. 반대로 지금 파산했다 해도 매달 조금씩 저축하고 있다면 경제적 자립으로 가는 길 위에 서 있는 것이다. 비록 자신이 바라는 것보다 훨씬 느릴지라도 말이다.<br>
     결과는 그동안의 습관이 쌓인 것이다. 순자산은 그동안의 경제적 습관이 쌓인 결과다. 몸무게는 그동안의 식습관이 쌓인 결과이고, 지식은 그동안의 학습 습관이 쌓인 결과다. 방 안의 잡동사니들은 그동안의 청소 습관이 쌓인 결과다. 우리는 우리가 반복해서 했던 일의 결과를 얻는다.<br>
@@ -463,7 +496,7 @@
     <a></a>
     [아주 작은 습관의 힘 34-36p] 습관은 복리로 작용한다. 돈이 복리로 불어나듯이 습관도 반복되면서 그 결과가 곱절로 불어난다. 어느 날 어느 순간에는 아주 작은 차이여도, 몇 달 몇 년이 지나면 그 영향력은 어마어마해질 수 있다. 2년, 5년, 10년 후를 생각해보라. 좋은 습관의 힘과 나쁜 습관의 대가는 현저한 차이를 드러낼 것이다.<br>
     그러나 매일 이것을 느끼고 감사하기엔 어려울 수도 있다. 우리는 작은 변화들을 무시한다. 그 순간에는 그리 중요하게 보이지 않기 때문이다.<br>
-    지금 당장 돈을 조금 아낀다고 해서 백만장자가 되지는 않는다. 사흘 연속 체육관에 가도 멋진 몸이 만들어지진 않는다. 오늘 밤 한 시간 동안 중국어를 공부해도 중국어로 말하진 못한다. 그저 아주 작은 변화가 있을 뿐, 그 결과는 당장 눈에 보이지 않는다. 그렇다 보니 우리는 수비게 이전의 일상으로 돌아간다.<br>
+    지금 당장 돈을 조금 아낀다고 해서 백만장자가 되지는 않는다. 사흘 연속 체육관에 가도 멋진 몸이 만들어지진 않는다. 오늘 밤 한 시간 동안 중국어를 공부해도 중국어로 말하진 못한다. 그저 아주 작은 변화가 있을 뿐, 그 결과는 당장 눈에 보이지 않는다. 그렇다 보니 우리는 쉽게 이전의 일상으로 돌아간다.<br>
     불행히도 변화는 느리게 일어난다. 우리는 곧 나쁜 습관으로 돌아간다. 오늘 정크푸드를 먹었다 해도 체중계 바늘이 바꾸진 않는다. 오늘 밤늦게까지 일하고 가족을 소홀히 한다 해도 가족은 우리를 이해해준다. 오늘 할 일을 내일로 미뤄도 대개는 제시간에 끝마치게 된다. 결심은 잊히기 쉽다.<br>
     하지만 좋지 못한 결심들, 사소한 실수들, 작은 변명들을 매일같이 반복하면서 1퍼센트씩 잘못을 계속해나가면 이 작은 선택들은 해로운 결과들을 켜켜이 쌓아간다. 잘못 내디딘 한 발자국, 지금 1퍼센트의 퇴보가 조금씩 쌓여 결과적으로 문제가 발생한다.
     <br><br>
@@ -539,7 +572,7 @@
     <br><br>
 
     <a></a>
-    [새는 날아가면서 뒤돌아보지 않는다 137p] 화살에 맞으면 아픔을 느끼되 그 아픔을 과장하지 말라고 붓다는 충고했다. 병이 난 제자를 찾아가서도 아파하된 그 아픔에 깨어 있으라고 가르쳤다. 상처에 너무 상처 받지 말 것. 실망에 너무 실망하지 말 것. 아픔에 너무 아파하지 말 것 - 이것이 두 번째 화살을 피하는 방법이다. 잠시 아플 뿐이고, 잠시 화가 날 뿐이고, 잠시 슬플 뿐이면 되는 것이다. 그 순간이 지나면 우리는 다시 맑고 투명해진다.
+    [새는 날아가면서 뒤돌아보지 않는다 137p] 화살에 맞으면 아픔을 느끼되 그 아픔을 과장하지 말라고 붓다는 충고했다. 병이 난 제자를 찾아가서도 아파하되 그 아픔에 깨어 있으라고 가르쳤다. 상처에 너무 상처 받지 말 것. 실망에 너무 실망하지 말 것. 아픔에 너무 아파하지 말 것 - 이것이 두 번째 화살을 피하는 방법이다. 잠시 아플 뿐이고, 잠시 화가 날 뿐이고, 잠시 슬플 뿐이면 되는 것이다. 그 순간이 지나면 우리는 다시 맑고 투명해진다.
     <br><br>
 
     <a></a>
@@ -553,11 +586,6 @@
 
     <a></a>
     [새는 날아가면서 뒤돌아보지 않는다 71p] 하버드대 심리학자 대니얼 길버트는 '행복에 영향을 미치는 것은 배경이나 환경이 아니라 일상의 순간에 대한 집중도'라고 말했다.
-    <br><br>
-
-    <a></a>
-    [새는 날아가면서 뒤돌아보지 않는다 46p] 마음이 담긴 길을 걸으려면 편견의 반대편에 설 수 있어야 한다. 모두에게 사랑받고 모든 사람이 당신의 여행을 이해하리라 기대하지 말아야 한다. 당신의 길이지 그 사람들의 길이 아니기 때문이다. 남의 답이 아니라 자신의 답을 찾는 것이 호모 비아토르이다.<br>
-    마음이 담긴 길을 걷는 사람은 행복을 추구하는 것이 아니라 행복과 나란히 걷는다. 행복은 목적지가 아니라 여정에서 발견되는 것이기 때문이다. 행복의 뒤를 좇는다는 것은 아직 마음이 담긴 길을 걷지 않고 있다는 것이다. 당신이 누구이든 어디에 있든 가고 싶은 길을 가라. 그것이 마음이 담긴 길이라면. 마음이 담긴 길을 갈 때 자아가 빛난다.
     <br><br>
 
     <a></a>
@@ -585,7 +613,7 @@
     <br><br>
 
     <a></a>
-    [THE CODE OF THE EXTRAORDINARY MIND 196p] I once asked Arianna Huffington the same questions I asked Elon Musk: "What makes you Arianna? If we could distill you an try to extract your essence, what is it that makes you you?"<br>
+    [THE CODE OF THE EXTRAORDINARY MIND 196p] I once asked Arianna Huffington the same questions I asked Elon Musk: "What makes you Arianna? If we could distill you and try to extract your essence, what is it that makes you you?"<br>
     Arianna replied:<br>
     I would say trust. I have an incredible trust in life. One of my favorite quotes is a little misquote: "Live life as though everything is rigged in our favor." I really profoundly believe that whatever has happened in my life, including the biggest heartbreaks, the biggest disappointments, was exactly what was needed to help me get to the next stage of my own personal evolution and growth. I always had a sense of that, but now I believe that so profoundly. I can literally see the hidden blessing in every bad thing that happened.
     <br><br>
@@ -614,10 +642,10 @@
     <br><br>
 
     <a></a>
-    [THE CODE OF THE EXTRAORDINARY MIND 189p] In a nutshell, his question was this: If it is true that "I am enough" and if we don'tt need to get validation or praise from others, what is the driving force that pushes us do big things in the world? What would prevent us from just being happy couch potatoes, doing nothing but enjoying the present?<br>
+    [THE CODE OF THE EXTRAORDINARY MIND 189p] In a nutshell, his question was this: If it is true that "I am enough" and if we don't need to get validation or praise from others, what is the driving force that pushes us do big things in the world? What would prevent us from just being happy couch potatoes, doing nothing but enjoying the present?<br>
     Marisa replied:<br>
     If you sit on the couch all day and do nothing, it is precisely because you don't think you're enough. You're afraid. You're afraid of failure. You're afraid of rejection. You're afraid that those things will be proof positive that you indeed are not enough. So you do nothing.<br>
-    Marisa cnotinued:<br>
+    Marisa continued:<br>
     But if you believe that you're enough, that's when you take action. That's when you go out and try something new. That's when you apply for that job you really want. That's when you ask for that raise. Because you're enough. And even if you fail, you won't take rejection personally because it's not you――you ARE enough――so it must be your methods or your approach or skill or whatever――and because you know you're enough, you know you can then improve those methods and skills and your approaches and then try again.
     <br><br>
 
@@ -758,7 +786,7 @@
     <br><br>
 
     <a></a>
-    [THE CODE OF THE EXTRAORDINARY MIND 133p] It turns out that our brains are literally hardwired to perform at their best not when they are negative or even neutral, but when they are positive. Yet in today's world, we ironically sacrifice happiness for success onl to lower our brain's success rates. - SHAWN ACHOR, THE HAPPINESS ADVANTAGE
+    [THE CODE OF THE EXTRAORDINARY MIND 133p] It turns out that our brains are literally hardwired to perform at their best not when they are negative or even neutral, but when they are positive. Yet in today's world, we ironically sacrifice happiness for success only to lower our brain's success rates. - SHAWN ACHOR, THE HAPPINESS ADVANTAGE
     <br><br>
 
     <a></a>
@@ -885,8 +913,8 @@
 
     <a></a>
     [THE CODE OF THE EXTRAORDINARY MIND 96p] So I asked him this: "Richard, you've started eight different companies in eight different industries and taken all of them to a billion dollars. That's huge. If you could summarize in one sentence how you did it, what would you say?"<br>
-    Richard idn't blink. He answered immediately like a wise, kind sage. Here's what he said:<br>
-    It's all about finding and hiring people smarter than you, getting them to join your business and giing them good work, then getting out of the way and trusting them. You have to get out of the way so you can focus on the bigger vision. That's important, but here is the main thing: You must make them see their work as a mission.
+    Richard didn't blink. He answered immediately like a wise, kind sage. Here's what he said:<br>
+    It's all about finding and hiring people smarter than you, getting them to join your business and giving them good work, then getting out of the way and trusting them. You have to get out of the way so you can focus on the bigger vision. That's important, but here is the main thing: You must make them see their work as a mission.
     <br><br>
 
     <a></a>
@@ -903,15 +931,15 @@
     <br><br>
 
     <a></a>
-    [THE CODE OF THE EXTRAORDINARY MIND 77p] When you replace disempowering models of reality with empowering ones, tremndous changes can occur in your life at a very rapid pace.
+    [THE CODE OF THE EXTRAORDINARY MIND 77p] When you replace disempowering models of reality with empowering ones, tremendous changes can occur in your life at a very rapid pace.
     <br><br>
 
     <a></a>
-    [THE CODE OF THE EXTRAORDINARY MIND 72p] Much of growing wiser and moving toward the extraordinary is really about becoming aware of the odels or reality that you carry with you without realizing it.
+    [THE CODE OF THE EXTRAORDINARY MIND 72p] Much of growing wiser and moving toward the extraordinary is really about becoming aware of the models or reality that you carry with you without realizing it.
     <br><br>
 
     <a></a>
-    [THE CODE OF THE EXTRAORDINARY MIND 64p] AS you think of your personal growth, think of consciousness engineering as that trunk. The two big branches are odels of reality and systems for living. Everything you study in personal growth will either be a model(a new belief about money, for example) or a system (say, a new exercise or diet routine). These things cling to the two big branches.<br>
+    [THE CODE OF THE EXTRAORDINARY MIND 64p] As you think of your personal growth, think of consciousness engineering as that trunk. The two big branches are models of reality and systems for living. Everything you study in personal growth will either be a model(a new belief about money, for example) or a system (say, a new exercise or diet routine). These things cling to the two big branches.<br>
     I've found that by keeping this idea in mind, I can learn and grow faster than before. Once you internalize consciousness engineering, every time you pick up a book to read on personal growth or health, or an autobiography of a great leader, you start to look for model upgrades that you can swap in and new systems you can adopt.
     <br><br>
 
@@ -963,7 +991,7 @@
     <br><br>
 
     <a></a>
-    [THE CODE OF THE EXTRAORDINARY MIND 13p] What if life was not meant to be save? Instead, what if it was meant to be a beautiful joyride, with ups and downs as we take off the training wheels of the culturescape and try out things outside what is practical or realistic?<br>
+    [THE CODE OF THE EXTRAORDINARY MIND 13p] What if life was not meant to be saved? Instead, what if it was meant to be a beautiful joyride, with ups and downs as we take off the training wheels of the culturescape and try out things outside what is practical or realistic?<br>
     what if we accepted that things will go wrong―but that this is smply part of life's beautiful unfolding and that even the biggest failures can have within them the seeds of growth and possibility?<br>
     Our culturescape evolved to keep us safe――but in this day and age, we no longer need to fear tigers by the riverbank. safety is overrated; taking risks is much less likely to kill us than ever before, and that means that playing it safe is more likely just holding us back from the thrills of a life filled with meaning and discovery.
     <br><br>
@@ -1046,7 +1074,7 @@
     <br><br>
 
     <a></a>
-    [스틸니스 175p] 중독은 의심할 여지없는 생물학적 질환이지만 조금 더 실제적인 의미로 보면 스스로의 충동을 우선하는 자아에 집착하는 과정이기도 하다. 그러므로 우리보다 더 큰 존재가 있다는 믿음이 중요한 돌파구가 될 수 있다. 그런 믿음을 갖는다는 것은 중독자들이 자기가 전지전능한 신이 아니며 자기에게는 무엇이든 할 수 있는 ㅎ미이 없다는 사실을, 실제로 그랬던 적이 단 한 번도 없었다는 사실을 마침내 받아들인다는 의미다. 그런 힘을 가진 자는 실제로 아무도 없다.
+    [스틸니스 175p] 중독은 의심할 여지없는 생물학적 질환이지만 조금 더 실제적인 의미로 보면 스스로의 충동을 우선하는 자아에 집착하는 과정이기도 하다. 그러므로 우리보다 더 큰 존재가 있다는 믿음이 중요한 돌파구가 될 수 있다. 그런 믿음을 갖는다는 것은 중독자들이 자기가 전지전능한 신이 아니며 자기에게는 무엇이든 할 수 있는 힘이 없다는 사실을, 실제로 그랬던 적이 단 한 번도 없었다는 사실을 마침내 받아들인다는 의미다. 그런 힘을 가진 자는 실제로 아무도 없다.
     <br><br>
 
     <a></a>
@@ -1091,7 +1119,7 @@
     <br><br>
 
     <a></a>
-    [스틸니스 103p] 자신감 있는 사람은 중요한 게 무엇인지 잘 알고 있다. 타인의 의견을 무시해야 할 때를 안다. 앞서나가기 위해 허풍을 떨거나 거짓말하지 않는다. 당연히 자신의 허풍과 거짓말을 따락지 못해 허덕이는 일 또한 없다. 자신감이란 스스로를 증명해야 할 필요에서 벗어나 우리의 기준을 우리 스스로 정할 수 있게 만들어주는 자유다. 자신감 있는 사람은 타인과의 견해 차이를 두려워하지 않으며 열등감 때문에 올바른 의견을 그릇된 의견으로 바꾸지도 않는다.<br>
+    [스틸니스 103p] 자신감 있는 사람은 중요한 게 무엇인지 잘 알고 있다. 타인의 의견을 무시해야 할 때를 안다. 앞서나가기 위해 허풍을 떨거나 거짓말하지 않는다. 당연히 자신의 허풍과 거짓말을 따라가지 못해 허덕이는 일 또한 없다. 자신감이란 스스로를 증명해야 할 필요에서 벗어나 우리의 기준을 우리 스스로 정할 수 있게 만들어주는 자유다. 자신감 있는 사람은 타인과의 견해 차이를 두려워하지 않으며 열등감 때문에 올바른 의견을 그릇된 의견으로 바꾸지도 않는다.<br>
     그에 반해 에고는 의심에 흔들리고 오만에 시달리며 자기 자랑과 가식을 숨기지 못한다. 그렇다고 자신의 내면을 들여다보거나 속내를 있는 그대로 드러내지도 않는다. 그 속에 어떤 추한 것이 들어있는지 너무나 잘 알고 있기 때문이다. 자신감 있는 사람들은 늘 열린 마음으로 자기반성을 하기 때문에 아무것도 숨기지 않은 있는 그대로의 내면을 들여다볼 수 있다. 이처럼 불필요한 갈등과 불확실함, 분노를 제거하는 행동이 비로소 고요를 얻을 수 있는 여유를 만들어낸다.
     <br><br>
 
@@ -1105,7 +1133,7 @@
     <br><br>
 
     <a></a>
-    [스틸니스 77p] 우리가 느끼는 괴로움의 대부분은 심사숙고에서 나온 행동이 아니라 본능적으로 반응한 행동에서 비롯된다. 우리가 잘못하는 대부분의 행동들도 그렇다. 우리는 실제가 아닌 그림자에 반응하고 시험해보기 전부터 확신을 갖는다. 안경을 스고 제대로 볼 수 있도록 걸음을 멈추는 법이 없다.<br>
+    [스틸니스 77p] 우리가 느끼는 괴로움의 대부분은 심사숙고에서 나온 행동이 아니라 본능적으로 반응한 행동에서 비롯된다. 우리가 잘못하는 대부분의 행동들도 그렇다. 우리는 실제가 아닌 그림자에 반응하고 시험해보기 전부터 확신을 갖는다. 안경을 쓰고 제대로 볼 수 있도록 걸음을 멈추는 법이 없다.<br>
     그렇다면 머릿속을 비운 다음 무엇을 해야 하는가? 바로 여유를 갖고 생각하는 것인데, 정말 제대로 생각하려면 규칙적으로<br>
     * 당신에게 무엇이 중요한지 생각해보라.<br>
     * 정말로 지금 어떤 일이 일어나고 있는지 생각해보라.<br>
