--- a/Ancient_spells.html
+++ b/Ancient_spells.html
@@ -83,11 +83,20 @@
 
 
     <a></a>
+    [리얼리티 트랜서핑1 116p] 당신의 일이 곧 당신의 목표인 경우, 그 일은 당신을 성공으로 이끄는 터널처럼 작용한다. 다른 누군가를 위해 일하는 것과는 대조적으로, 그런 일은 신명을 불어넣어주고 기쁨과 영감과 만족감을 준다. 당신이 자신의 일에 대해 확신을 가지고 이렇게 말할 수 있는, 보기 드물게 행복한 영혼들 중 한 사람이라면 당신은 그 어떤 것도 걱정할 필요가 없다.
+    <br><br>
+
+    <a></a>
     [리얼리티 트랜서핑1 115p] 자신을 빌려줄 때는 어떤 상황이든 자신이 맡은 일을 흠잡을 데 없이 잘 수행해야 한다. 이때, 당신 내면의 관찰자인 지켜보는 자가 당신을 돕게 하라. 그러지 않으면 당신은 머지 않아 또다시 게임에 빠져들게 될 것이다. 당신 내면의 지켜보는 자는 결코 분리된 인격 따위가 아니다. 더 큰 자아인 내면의 관찰자는 배후에서 당신이 무엇을 하는지, 그리고 어떻게 하는지를 단순히 알아차리고 있다.
     <br><br>
 
     <a></a>
     [리얼리티 트랜서핑1 114p] 자신을 빌려주는 동안에는 흠잡을 데 없이 행동하라. 사소한 실수도 하지 않도록 주의하라. 그것은 당신이 해이하다고 비난받을 빌미를 준다. 흠잡을 데 없는 경지는 일의 성과를 좌우한다. 자신을 빌려준다는 것은 자신의 행위에 책임을 지지 않고 게이름을 피우는 것과는 전혀 다르다. 그것은 잉여 포텐셜을 만들어내지 않으면서 집착 없이 행동하는 것을 말한다. 그러나 동시에, 시시콜콜한 세부사항에 이르기까지 당신에게 요구된 모든 일을 완수하는 것을 의미한다. 그렇게 하지 않으면 길이 순조롭지 않을 것이다.
+    <br><br>
+
+    <a></a>
+    [리얼리티 트랜서핑1 114p] 당신에게 그 일의 비중이 크면 클수록 당신은 더 많은 문제를 겪게 될 것이다. 그런 모든 문제를 겪는 것이 당신에게는 그저 정상적인 일로 보일 것이다. 모든 것이 '일의 당연한 과정'인 것처럼 생각되는 것이다. 그러나 사실은, '중요성의 발판'을 낮추면 문제를 훨씬 덜 겪으리라는 것이다.<br>
+    이 모든 사실로부터 끌어낼 수 있는 결론은 하나밖에 없다. 잉여 포텐셜을 제거하기 위해서, 일에 대한 자신의 태도를 의식적으로 재검토해볼 필요가 있다는 것이다. 일 외에 취미생활을 할 수 있는 자유시간을 갖는 것이 꼭 필요하다. 휴식하는 법을 모르는 사람은 일하는 법도 모른다. 일하는 시간 동안은 자신을 빌려주라. 일에게 당신의 머리와 손을 내어주라. 그러나 가슴을 주어서는 안 된다. 그 일의 펜듈럼은 당신의 모든 에너지를 요구한다. 그러나 당신은 그 일만 하기 위해서 세상에 온 것이 아니다. 잉여 포텐셜을 제거하고 펜듈럼으로부터 자유로워지면 직장에서도 훨씬 더 생산적이고 효율적으로 일할 수 있다.
     <br><br>
 
     <a></a>
@@ -1274,8 +1283,8 @@
     <br><br>
 
     <a></a>
-    [프레임 177p] 우리가 가지고 있는 신념과 기대는 먼저 우리의 행동을 바꾼다. 그리고 우리의 행동은 그에 반응하는 타인의 행동을 바꾼다. 우리는 상대방의 행동이나 나 때문이라는 사실을 모른 채 '저 사람은 원래 그렇구나. 내 생각이 맞았어'라고 자신의 신념을 정당화한다. (중략) 이런 악순환의 구조를 심리학에서는 '자기실현적 예언(self-fulfilling prophecy)'이라고 부른다. 기대가 그에 부합하는 현실을 만들어내기 때문에 붙여진 이름이다.<br>
-    다른 사람에 대하여 내가 가지고 있는 내 선입견이 먼저 내 행동을 밖고, 그 행동이 타인의 행동을 바꾸는 이 위험한 순환을 인식할수록 우리는 지혜로워질 것이다.
+    [프레임 177p] 우리가 가지고 있는 신념과 기대는 먼저 우리의 행동을 바꾼다. 그리고 우리의 행동은 그에 반응하는 타인의 행동을 바꾼다. 우리는 상대방의 행동이 나 때문이라는 사실을 모른 채 '저 사람은 원래 그렇구나. 내 생각이 맞았어'라고 자신의 신념을 정당화한다. (중략) 이런 악순환의 구조를 심리학에서는 '자기실현적 예언(self-fulfilling prophecy)'이라고 부른다. 기대가 그에 부합하는 현실을 만들어내기 때문에 붙여진 이름이다.<br>
+    다른 사람에 대하여 내가 가지고 있는 내 선입견이 먼저 내 행동을 바꾸고, 그 행동이 타인의 행동을 바꾸는 이 위험한 순환을 인식할수록 우리는 지혜로워질 것이다.
     <br><br>
 
     <a></a>
@@ -1958,7 +1967,7 @@
     <br><br>
 
     <a></a>
-    [클루지 208-209p] 쾌락을 지배하는 신경 하드웨어는 (인간 마음의 다른 많은 부분들처럼) 둘로 나뉘어 있다. (하는 일이 잘 되었을 때 느끼느느 성취감처럼) 일부 쾌락은 숙고 체계로부터 파생되기도 하겠지만, 대부분은 그렇지 않다. 대부분의 쾌락은 조상 전래의 반사 ㄹ체계의 영향 아래 있다. 그리고 이 체계는 우리가 이미 보았듯이 근시안적인 편이며, 두 체계가 갈등을 일으킬 때는 선조 체계에 무게가 쏠린다.
+    [클루지 208-209p] 쾌락을 지배하는 신경 하드웨어는 (인간 마음의 다른 많은 부분들처럼) 둘로 나뉘어 있다. (하는 일이 잘 되었을 때 느끼는 성취감처럼) 일부 쾌락은 숙고 체계로부터 파생되기도 하겠지만, 대부분은 그렇지 않다. 대부분의 쾌락은 조상 전래의 반사 체계의 영향 아래 있다. 그리고 이 체계는 우리가 이미 보았듯이 근시안적인 편이며, 두 체계가 갈등을 일으킬 때는 선조 체계에 무게가 쏠린다.
     <br><br>
 
     <a></a>
