--- a/Game_and_reality.html
+++ b/Game_and_reality.html
@@ -68,6 +68,13 @@
 
 
 
+  <a></a>
+  [메타버스 이미 시작된 미래 272p] The future is already here - it's just not very evently distributed. - William Gibson
+  <br><br>
+
+  <a></a>
+  [메타버스 이미 시작된 미래 27p] 이렇듯 '메타버스'란 용어를 세상에 다시 불러들인 건 엔비디아의 젠슨 황이다. "메타버스의 시대가 오고 있다"는 그의 말은 1962년 캐네디 대통령의 연설인 "우리는 달에 가기로 결정했습니다"와 같이 새로운 시대를 여는 시작점으로 기억될 수 있을 것이다.
+  <br><br>
 
   <a></a>
   [메타버스 328-329p] 대부분 메타버스의 시스템은 벌금, 처벌, 비난 등의 '빼기'가 아닌 상금, 레벨업, 축하 등의 '더하기'로 설계되어 있습니다. 그래서 우리는 그 세계의 상호작용을 좋아합니다. 빼기 구조인 현실 세계를 더하기로 바꾸는 게 좋을까요? 아니면 현실 세계의 구조와 비슷하게 메타버스 세계를 빼기로 바꾸는 게 좋을까요? 빼기가 싫어서 더하기를 찾아 도피를 했다고 보기에는 현실 세계에 지나치게 많은 빼기가 있습니다. 사람들은 더하기가 많은 메타버스 세계에서 더 많은 도전을 꿈꿉니다. 빼기보다는 더하기를 중심으로 탐험하고, 소통하고, 성취하고자 합니다.<br>
