--- a/Ancient_spells.html
+++ b/Ancient_spells.html
@@ -46,7 +46,7 @@
   <div id="contents">
     <img src="blizzardstorm.gif" width="100%">
 
-    <h1>Ancient Spells[Lv.61]</h1><br><br><br>
+    <h1>Ancient Spells[Lv.64]</h1><br><br><br>
 
     <h3 style="text-align:center">Spells Mastered</h3><br>
 
@@ -81,6 +81,54 @@
 
 
 
+    <a></a>
+    [리얼리티 트랜서핑1 155p] 육체적인 힘을 지닌 사람은 많으나 인품의 힘을 지닌 사람은 드물다. 한 개인이 가질 수 있는 위엄의 열쇠는 죄책감이 없는 데에 있다. 개인의 진정한 힘은 다른 사람의 목을 조르는 능력에 있는 게 아니라, 죄책감으로부터 얼마나 자유로울 수 있는지에 달려 있는 것이다.
+    <br><br>
+
+    <a></a>
+    [리얼리티 트랜서핑1 144-145p] 무엇을 가지고자 하는 욕망에는 또다른 측면이 있다. 무엇이든 간절히 원하기만 하면 얻을 수 있다는 말이 있다. 아주 강력한 소망이 당신을 그것이 성취되는 인생트랙으로 데려다 줄 것처럼 보일 수도 있는 것이다. 그러나 그렇지 않다. 당신의 욕망이 의존으로 변질되어 일종의 정신이상 상태로 진행되거나, 어떤 희생을 감수하고라도 그것을 얻고 말겠다는 식의 히스테리로 변한다면 당신은 내면 깊은 곳에서 욕망이 성취되는 것을 믿지 않게 된다. 결과적으로 당신은 '강력한 방해전파'를 동반한 사념 에너지를 송신하게 된다. 욕망이 성취되리라고 믿어지지 않으면 당신은 자신을 확신시키기 위해 온갖 노력을 다 할 것이다. 그래서 잉여 포텐셜은 더욱 커진다. 당신은 그 '필생의 과업'을 이루기 위해 당신의 전 존재를 소진시킬지도 모른다. 이럴 때 필요한 것은 오직 목표의 중요성을 낮추는 일이다. 잡지를 사거 신문가판대로 갈 때처럼, 그런 마음으로 한 번 해보라.
+    <br><br>
+
+    <a></a>
+    [리얼리티 트랜서핑1 140p] 사람들과 말하는 데 어려움이 있는 사람은 경청하는 능력으로 보상받을 수 있다. 이런 속담이 있다. "모두가 거짓말을 하고 있지만, 아무 문제 없다. 아무도 상대방의 말을 듣고 있지 않으니까." 유청한 언변은 사람들의 흥미를 끌 수 있겠지만, 그것은 단지 최후의 수단일 뿐이다. 당신과 마찬가지로 모든 사람은 자신의 문제에만 골몰하고 있다. 그러므로 당신의 마음을 솔직히 털어놓을 수 있는, 잘 들어주는 사람은 진정한 친구다. 수줍음을 타는 사람들에게 좋은 조언이 하나 있다. - 수줍음을 보물처럼 소중히 간직하라! 정말이지 수줍음은 숨은 매력을 가지고 있다. 수줍음과 싸우기를 멈추기로 마음먹기만 하면 그것은 더이상 꼴사나운 모습이 아니며, 사람들이 당신을 좋아하기 시작하는 것을 보게 될 것이다.
+    <br><br>
+
+    <a></a>
+    [리얼리티 트랜서핑1 138p] 세상을 통제하고 조종할 수 있다는 따위의 생각은 모두 멀리해야 한다. 사회적인 위치와 상관없이, '전권'을 휘두르는 자리를 차지하면 당신은 반드시 실패하게 된다. 주변 세상을 변화시키려고 애쓰면 균형이 흐트러지기 때문이다. 세상사에 너무 간섭하면 반드시 많은 사람들의 이해관계를 건드리게 된다. 트랜서핑은 다른 사람의 이익을 해치지 않고 운명을 선택하게 해준다. 트랜서핑은 온갖 장애물을 극복하면서 길을 헤쳐 나가는 것보다 훨씬 더 효율적이다. 운명은 실로 당신의 손에 달려 있다. 운명을 바꾸는 능력이 아니라 선택하는 능력이 당신에게 주어져 있다는 의미에서만 그러하다. 자신이 말 그대로 운명의 창조자인양 행동하다가 낭패를 겪은 사람들이 많다. 트랜서핑에는 싸움이 발붙일 데가 없다. 그러니 당신은 '무기를 땅에 묻고' 안도해도 된다.
+    <br><br>
+
+    <a></a>
+    [리얼리티 트랜서핑1 137-138p] 우리는 흔히 불쾌한 일, 문젯거리, 장애물 등이 모두 불가피한 세상의 일부라고 여긴다. 아주 작은 것에서부터 매우 심각한 것에 이르기까지 이 모든 문제가 인간에게 필수적인 평생의 동반자라는 사실을 놀라워하는 사람은 아무도 없다. 우리는 모두 세상은 당연히 그런 것이라는 생각에 너무나 익숙해져 있다. 그러나 사실, 문제를 겪는다는 것은 이례적이고 비정상적인 현상이다. 문제가 어디서 오는지, 그리고 왜 내게 일어나는지를 순전히 논리적인 사고로써는 알아낼 수 없을 때가 많다. 대다수의 문제들은 균형력의 이런 저런 작용에 의해 일어난다. 균형력은 당신이나 당신 주변 사람들이 만들어낸 잉여 포텐셜을 만들어냈다는 사실을 깨닫지도 못한 채 문젯거리를 필요악으로 받아들이고, 그것이 단지 균형력의 작용일 뿐임을 이해하지 못한다.<br>
+    잉여 포텐셜을 유지하려는 막대한 노력으로부터 해방되면 당신은 대부분의 문제에서 벗어날 수 있다. 엄청난 양의 에너지가 단지 헛되이 사용될 뿐만 아니라, 당신의 의도와는 상반되는 결과가 나오도록 균형력의 방향을 돌리는 데도 쓰이고 있다. 그러니 파리처럼 유리창에 머리를 부딪는 일을 당장 그만둬야 한다. 그 대신 좋고 나쁨의 척도에서 우월한 자리를 지키기 위해 노심초사하기를 그치고 미덕을 기르는 쪽으로 의도를 보내야 한다. 자신을 스스로 중요하게 여기는 무거운 짐에서 벗어나면 당신은 균형력의 영향에서도 해방된다. 문젯거리는 갈수록 줄어들고 자신의 힘을 더욱 신뢰하게 될 것이다.
+    <br><br>
+
+    <a></a>
+    [리얼리티 트랜서핑1 135p] 경멸과 허영은 인간의 악덕이다. 동물들은 경멸과 허영을 모른다. 동물들은 합목적적인 의도의 안내를 받아 완벽한 자연의 의지를 실현한다. 생각하는 인간보다 야생의 자연이 더 완벽하다. 모든 육식동물이 그렇듯이, 늑대는 먹잇감을 향해 증오나 경멸을 느끼지 않는다. (햄버거를 향해 증오나 경멸을 느끼려 해보라.) 그러나 사람들은 순전히 잉여 포텐셜 위에다 서로의 관계를 쌓아올린다. 식물과 동물의 위대함은 그들이 자신의 위대함을 알지 못한다는 사실에 있다. 의식은 인간에게 유용한 장점들을 많이 가져다 주었지만 허영심, 경멸, 죄책감과 열등감 등과 같은 해로운 쓰레기들도 함께 주었다.
+    <br><br>
+
+    <a></a>
+    [리얼리티 트랜서핑1 135p] 스스로 자부심을 느끼거나 자신을 사랑한다면 거기에는 아무런 잘못이 없다. 자신을 사랑하는 것은 자기 스스로 만족하는 것이기 때문에 타인을 괴롭히지 않는다. 자만심으로 우쭐거리는 사람이 다른 사람의 약점과 결점이나 소박한 성취에 대해 업신여기는 태도를 가질 때에만 균형이 흐트러진다. 그럴 때 자신에 대한 사랑과 자부심은 허영이 된다. 그리고 그 결과는 균형력의 작용에 의해 역시 큰코를 다치는 일로 나타날 것이다.
+    <br><br>
+
+    <a></a>
+    [리얼리티 트랜서핑1 135p] 어떤 이유에서건 직장의 동료들을 비난하지 말라. 최선의 경우, 당신도 똑같은 실수를 하게 될 것이다. 최악의 경우에는 갈등이 일어날 수 있고, 그것은 당신에게 좋을 것이 하나도 없다. 당신이 전적으로 옳았다고 하더라도 그 때문에 해고될 수 도 있다.
+    <br><br>
+
+    <a></a>
+    [리얼리티 트랜서핑1 134p] 무슨 일이 있더라도 사람을 경멸하지 말라. 경멸은 가장 위험한 형태의 비난이다. 균형력의 작용에 의해 당신도 비난받는 사람과 동일한 위치에 놓이게 될 수 있기 때문이다. 균형력으로서는 그렇게 하는 것이 상실된 조화를 회복하는, 더 쉽고 직접적인 방법이다. 당신은 부랑자와 가난한 사람들을 멸시하는가? 그렇다면 당신도 집과 돈을 잃어버리게 될 수 있다. 균형은 그런 식으로 복구된다. 신체적 장애가 있는 사람을 경멸하는가? 그렇다면 당신을 위해 불의의 사고가 마련되어 있을지 모른다. 알코올 중독자와 약물 중독자를 경멸하는가? 그렇다면 당신도 쉽게 그렇게 될 수 있을 것이다. 그들도 처음부터 그렇게 태어난 것은 아니지 않은가? 인생의 여러 환경조건들이 그들을 그렇게 만들어온 것이다. 그런데 그런 환경이 당신만은 반드시 피해가라는 법이 있는가?
+    <br><br>
+
+    <a></a>
+    [리얼리티 트랜서핑1 124p] 사랑은 긍정적인 에너지를 만들어내고 그 에너지는 당신을 그에 상응하는 긍정적 인생트랙으로 데려다준다. 반면에 이상화는 잉여 포텐셜을 만들어내고, 그 결과 이 잉여 포텐셜을 제거하는 균형력이 일어나게 한다. 균형력은 상황에 따라 다르게 작용하지만 그 결과는 동일하다. 그 결과는 말하자면 '신화 파괴'라고 할 수 있다. 사람이나 사물을 이상화하면 이런 일은 항상 일어나게 되어 있다. 대상에 따라, 그리고 이상화의 정도에 따라 그 결과의 심각성은 달아질 수 있지만 변함없는 것은, 그 결과가 부정적인 것이라는 점이다. 아무튼 이런 과정을 거쳐서 균형은 다시 회복된다.
+    <br><br>
+
+    <a></a>
+    [리얼리티 트랜서핑1 123p] 이상화한다는 것은 어떤 것을 과대평가하여 높은 데다 모셔놓고 숭배하며 우상화하는 것을 뜻한다. 사랑은 세상을 창조하고 이끌어가는 힘이다. 그리고 역설적으로 들릴지는 모르지만 사랑은 본질적으로 냉정하고 침착하기 때문에, 이상화와는 다르다. 무조건적인 사랑은 주인 없는 느낌이며 숭배 없는 찬탄이다. 다른 말로 하면, 사랑은 사랑하는 사람과 그 대상 사이에 의존적인 관계를 만들어내지 않는다. 이 간단한 공식이, 사랑이 끝나고 이상화가 시작되는 지점을 알아차릴 수 있도록 도움을 줄 것이다.
+    <br><br>
+
+    <a></a>
+    [리얼리티 트랜서핑1 116-117p] 자신에게 불만을 품는 것에 대해서부터 이야기를 시작해보자. 우리는 예컨대 자신의 개인적 성취나 자질에 대해 불만을 품기도 하지만, 또한 자신의 결점과 약점을 받아들이기를 거부하는 자신을 불만스러워하기도 한다. 자신의 결점과 약점을 알아차리는 것은 좋지만 그 때문에 콤플렉스를 갖게 되어서는 안 된다. 그런 결점들이 정말 마음을 괴롭혀서 매우 중요한 의미를 갖게 되면 잉여 포텐셜이 생겨난다. 그러면 균형력이 얼른 이 포텐셜을 제거하는 작업에 들어간다. 균형력의 작용은 그 사람의 장점을 발전시키는 데에 맞추어지거나, 아니면 약점과 싸우려는 노력에 맞추어질 수 있다. 그 결과 그는 그 둘 중 하나에 더 많은 노력을 기울이게 될 것이다. 많은 경우에 사람들은 약점과 싸우는 쪽을 택하여 결국은 자신과 맞싸우게 된다. 자신의 불완전함을 숨기려고 애쓰는 것은 부질없는 짓이거니와, 그것을 제거하는 것 역시 어려운 일이다. 그래서 당신은 정반대의 결과를 얻고, 상황은 갈수록 악화된다. 예컨대, 자신의 소심함을 숨기려고 애쓰면 더욱 더 부끄러워지거나, 혹은 반대로 낯선 사람에게도 지나치게 허물없이 행동하게 된다.
+    <br><br>
 
     <a></a>
     [리얼리티 트랜서핑1 116p] 당신의 일이 곧 당신의 목표인 경우, 그 일은 당신을 성공으로 이끄는 터널처럼 작용한다. 다른 누군가를 위해 일하는 것과는 대조적으로, 그런 일은 신명을 불어넣어주고 기쁨과 영감과 만족감을 준다. 당신이 자신의 일에 대해 확신을 가지고 이렇게 말할 수 있는, 보기 드물게 행복한 영혼들 중 한 사람이라면 당신은 그 어떤 것도 걱정할 필요가 없다.
@@ -1495,7 +1543,7 @@
     <br><br>
 
     <a></a>
-    [나는 4시간만 일한다 293p] 일단 주변 잡일을 제쳐놓는다고 하더라도 세상의 종말이 오지 않는 다는 것을 깨닫고 나면 세상 극소수만이 알고 있는 해방감을 느끼리 수 있다. 반드시 기억해라. 집중할 수 없다면 시간은 의미가 없다. 내게 이메일이나 보이스메일을 확인할 수 있는 시간이 있었을까? 물론이다. 아마 10분이면 충분했을 것이다. 그렇다면 그 10분 내에 위기상황을 해결할 수 있는 집중력이 있었는가? 전혀 없었다.<br>
+    [나는 4시간만 일한다 293p] 일단 주변 잡일을 제쳐놓는다고 하더라도 세상의 종말이 오지 않는 다는 것을 깨닫고 나면 세상 극소수만이 알고 있는 해방감을 느낄 수 있다. 반드시 기억해라. 집중할 수 없다면 시간은 의미가 없다. 내게 이메일이나 보이스메일을 확인할 수 있는 시간이 있었을까? 물론이다. 아마 10분이면 충분했을 것이다. 그렇다면 그 10분 내에 위기상황을 해결할 수 있는 집중력이 있었는가? 전혀 없었다.<br>
     "이메일을 체크하는 데는 1분이면 된다."라는 말은 그럴 듯해 보이지만 나는 그렇게 하지 않는다. 이메일 박스 안에 들어 있는 문제들은 컴퓨터를 끈 이후에도 몇 시간, 며칠을 머릿속에 머무르며 "자유 시간"을 걱정으로 쓸모없게 만들어 버린다는 것을 나는 경험으로 알고 있다. 이는 최악의 상태이다. 소중한 시간을 휴식도 아니고 생산적이지도 않은게 많든다. 일에 집중을 하든지 다른 것에 집중해라. 절대 그 중간 상태에 머무르지 마라.
     <br><br>
 
@@ -1625,7 +1673,7 @@
 
     <a></a>
     [나는 4시간만 일한다 93-94p] 여러 가지 일을 한꺼번에 처리하지 마라.<br>
-    (중략) 만약 당신이 우선순위를 제대로 매긴다면, 여러 가지 일을 한꺼번에 처리할 필요가 없어진다. 사실 이것은 성과느느 낮은 데도 생산적이라는 위안을 얻고 싶어서 여러 가지 일을 하려는 것일 뿐이다. 다시 반복하자면, 하루의 주요 목표 또는 업무는 두 가지를 넘어서는 안 된다. 처음부터 끝까지 따로따로 일을 하라. 다른 데 정신이 흐트러지지 않게 말이다. 관심이 여러 곳으로 분산되면 일을 더 자주 중단하게 되고, 집중력도 저하되며, 최종 결과도 더 좋지 않고, 만족감도 덜하게 된다.
+    (중략) 만약 당신이 우선순위를 제대로 매긴다면, 여러 가지 일을 한꺼번에 처리할 필요가 없어진다. 사실 이것은 성과는 낮은 데도 생산적이라는 위안을 얻고 싶어서 여러 가지 일을 하려는 것일 뿐이다. 다시 반복하자면, 하루의 주요 목표 또는 업무는 두 가지를 넘어서는 안 된다. 처음부터 끝까지 따로따로 일을 하라. 다른 데 정신이 흐트러지지 않게 말이다. 관심이 여러 곳으로 분산되면 일을 더 자주 중단하게 되고, 집중력도 저하되며, 최종 결과도 더 좋지 않고, 만족감도 덜하게 된다.
     <br><br>
 
     <a></a>
@@ -1673,7 +1721,7 @@
     <br><br>
 
     <a></a>
-    [나는 4시간만 일한다 62p] 낚시도 사람들이 잘 가지 않는 곳이 더 잘 되듯이, ㄹ자신감이 부족한 세상의 다른 모든 사람들이 안타를 생각할 때 홈런을 노려야 치기 쉬운 법이다. 큰 목표를 위한 경쟁은 적기 마련이니까.<br>
+    [나는 4시간만 일한다 62p] 낚시도 사람들이 잘 가지 않는 곳이 더 잘 되듯이, 자신감이 부족한 세상의 다른 모든 사람들이 안타를 생각할 때 홈런을 노려야 치기 쉬운 법이다. 큰 목표를 위한 경쟁은 적기 마련이니까.<br>
     큰일을 하려면 당연히 큰일을 필요로 해야 한다.
     <br><br>
 
