--- a/Strategy_and_tactics.html
+++ b/Strategy_and_tactics.html
@@ -51,8 +51,7 @@
     <img src="설화난영참.jpg" width="100%">
 
 
-  <h1>Strategy & Tactics[Lv.13]</h1><br><br><br>
-
+  <h1>Strategy & Tactics[Lv.14]</h1><br><br><br>
 
 
 
@@ -69,6 +68,12 @@
 
 
 
+
+  <a href="https://www.youtube.com/watch?v=b1WeWXgIgbQ&list=WL" title="인피쉰">
+    【 인피쉰 】 빨무 기본 꿀 팁 강의!</a><br>
+
+  <a href="https://www.youtube.com/watch?v=EGZm4si3Mag" title="NaDa이윤열">
+    헌터팀플 승률70%보장 21쓰리게이트빌드! 스린이들 필독</a><br>
 
   <a href="https://www.youtube.com/watch?v=3JevwIGlKHE" title="Destiny(데스티니)">
     데교수의 모르가나 특별 강의</a><br>
